[package]
name = "tcp-for-reals"
version = "0.1.0"
authors = ["boccko <szevasztavasz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
bytes = "1.0.1"